# node-template3

./: .gitignore  Cargo.toml  my.sh
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/auction/: Cargo.toml
pallets/auction/src/: auction_items.rs  default_weight.rs  lib.rs
pallets/bank/: Cargo.toml
pallets/bank/src/: lib.rs
pallets/cdp/: Cargo.toml
pallets/cdp/src/: default_weight.rs  lib.rs  params.rs
pallets/loan/: Cargo.toml
pallets/loan/src/: lib.rs
pallets/prices/: Cargo.toml
pallets/prices/src/: lib.rs  tests.rs
pallets/template/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: auction.rs  lib.rs  prices.rs  risk.rs  treasury.rs
primitives/structs/: Cargo.toml
primitives/structs/src/: lib.rs
primitives/traits/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: common.rs  constants.rs  lib.rs
