[package]
authors = ['Skyh']
edition = '2018'
name = 'pallet-auction'
version = "3.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
description = "FRAME pallet template"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false}

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

sp-std = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

orml-tokens = { path = "../../orml/tokens", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }

primitives = { version = "3.0.0", default-features = false, path = "../../primitives" }

[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false }


[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	"orml-tokens/std",
	"orml-traits/std",
	"orml-utilities/std",

	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"primitives/std",
]
