[package]
authors = ['Skyh']
edition = '2018'
name = 'pallet-prices'
version = "3.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
description = "FRAME pallet template"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
orml-traits = {path = "../../orml/traits", default-features = false}

primitives = { version = "3.0.0", default-features = false, path = "../../primitives" }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std'
]
